--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -1,8 +1,20 @@
 [Desktop Entry]
 Type=Service
 Comment=The standard mapper tools and views
+Comment[pt]=As ferramentas e vistas normais do mapeador
+Comment[uk]=Стандартні засоби і панелі перегляду карт
+Comment[x-test]=xxThe standard mapper tools and viewsxx
 Name=Standard
+Name[cs]=Standardní
+Name[nl]=Standaard
+Name[pt]=Normal
+Name[sv]=Standard
+Name[uk]=Стандарт
+Name[x-test]=xxStandardxx
 Comment=The standard mapper tools and views
+Comment[pt]=As ferramentas e vistas normais do mapeador
+Comment[uk]=Стандартні засоби і панелі перегляду карт
+Comment[x-test]=xxThe standard mapper tools and viewsxx
 ServiceTypes=KMuddy/Mapper/Plugin
 X-KDE-Library=libkmuddymapper_standard
 X-Kmuddy-Mapper-Plugin-Name=Kmud Mapper Standard Tools Plugin
