--- a/plugins/scripting/kmuddyscriptingplugin.desktop
+++ b/plugins/scripting/kmuddyscriptingplugin.desktop
@@ -1,7 +1,15 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=External Scripting
+Name[nl]=Externe scripting
+Name[pt]=Programação Externa
+Name[sv]=Externa skript
+Name[uk]=Зовнішні скрипти
+Name[x-test]=xxExternal Scriptingxx
 Comment=Adds support for external scripting.
+Comment[pt]=Adiciona o suporte para programas externos.
+Comment[uk]=Додає підтримку обробки зовнішніх скриптів.
+Comment[x-test]=xxAdds support for external scripting.xx
 ServiceTypes=KMuddy/Plugin
 Type=Service
 X-KDE-Library=kmuddyscriptingplugin
