--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -2,10 +2,24 @@
 Version=1.0
 Encoding=UTF-8
 Name=KMuddy
+Name[cs]=KMuddy
+Name[nl]=KMuddy
+Name[pt]=KMuddy
+Name[sv]=Kmuddy
+Name[uk]=KMuddy
+Name[x-test]=xxKMuddyxx
 Type=Application
 Exec=kmuddy -caption "%c" %i %m
 Icon=kmuddy.png
 DocPath=kmuddy/index.html
 GenericName=MUD client
+GenericName[nl]=MUD-client
+GenericName[pt]=Cliente de MUD
+GenericName[uk]=Клієнт MUD
+GenericName[x-test]=xxMUD clientxx
 Comment=MUD client
+Comment[nl]=MUD-client
+Comment[pt]=Cliente de MUD
+Comment[uk]=Клієнт MUD
+Comment[x-test]=xxMUD clientxx
 Terminal=false
