--- a/libs/kmuddyplugin.desktop
+++ b/libs/kmuddyplugin.desktop
@@ -4,6 +4,10 @@ Type=ServiceType
 X-KDE-ServiceType=KMuddy/Plugin
 X-KDE-Derived=KPluginInfo
 Comment=KMuddy Plugin
+Comment[nl]=Plugin van KMuddy
+Comment[pt]='Plugin' do KMuddy
+Comment[uk]=Додаток KMuddy
+Comment[x-test]=xxKMuddy Pluginxx
 
 # version of plug-in, used to prevent loading plug-ins with incompatible API
 [PropertyDef::X-KMuddy-Version]
