--- a/plugins/converter/kmuddyconverterplugin.desktop
+++ b/plugins/converter/kmuddyconverterplugin.desktop
@@ -1,7 +1,16 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Profile Converter
+Name[nl]=Profielconverter
+Name[pt]=Conversor de Perfis
+Name[sv]=Profilkonvertering
+Name[uk]=Засіб перетворення профілів
+Name[x-test]=xxProfile Converterxx
 Comment=This plug-in converts profiles from old KMuddy versions.
+Comment[nl]=Deze plugin converteert profielen van oude KMuddy-versies.
+Comment[pt]=Este 'plugin' converte os perfis das versões antigas do KMuddy.
+Comment[uk]=За допомогою цього додатка можна перетворити дані профілів старих версій KMuddy.
+Comment[x-test]=xxThis plug-in converts profiles from old KMuddy versions.xx
 ServiceTypes=KMuddy/Plugin
 Type=Service
 X-KDE-Library=kmuddyconverterplugin
