--- a/plugins/vartrigs/kmuddyvartrigplugin.desktop
+++ b/plugins/vartrigs/kmuddyvartrigplugin.desktop
@@ -1,7 +1,13 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Variable Triggers
+Name[pt]=Activações de Variáveis
+Name[uk]=Умовні зміни
+Name[x-test]=xxVariable Triggersxx
 Comment=Adds supports for triggers that fire off variable changes.
+Comment[pt]=Adiciona o suporte para activações que despoletam mudanças de variáveis.
+Comment[uk]=Додає підтримку умов, які призводять до змін значень змінних.
+Comment[x-test]=xxAdds supports for triggers that fire off variable changes.xx
 ServiceTypes=KMuddy/Plugin
 Type=Service
 X-KDE-Library=kmuddyvartrigplugin
