SVN_SILENT made messages (.desktop file)

--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -6,6 +6,7 @@ Comment[uk]=Стандартні засоби і панелі перегляду
 Comment[x-test]=xxThe standard mapper tools and viewsxx
 Name=Standard
 Name[cs]=Standardní
+Name[nds]=Standard
 Name[nl]=Standaard
 Name[pt]=Normal
 Name[sv]=Standard
