--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -1,10 +1,12 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Plugin Template
+Name[nds]=Moduulvörlaag
 Name[pt]=Modelo do 'Plugin'
 Name[uk]=Шаблон додатка
 Name[x-test]=xxPlugin Templatexx
 Comment=Plugin Template
+Comment[nds]=Moduulvörlaag
 Comment[pt]=Modelo do 'Plugin'
 Comment[uk]=Шаблон додатка
 Comment[x-test]=xxPlugin Templatexx
