SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -3,6 +3,7 @@ Version=1.0
 Encoding=UTF-8
 Name=KMuddy
 Name[cs]=KMuddy
+Name[es]=KMuddy
 Name[nl]=KMuddy
 Name[pt]=KMuddy
 Name[sv]=Kmuddy
@@ -13,11 +14,13 @@ Exec=kmuddy -caption "%c" %i %m
 Icon=kmuddy.png
 DocPath=kmuddy/index.html
 GenericName=MUD client
+GenericName[es]=Cliente de MUD
 GenericName[nl]=MUD-client
 GenericName[pt]=Cliente de MUD
 GenericName[uk]=Клієнт MUD
 GenericName[x-test]=xxMUD clientxx
 Comment=MUD client
+Comment[es]=Cliente de MUD
 Comment[nl]=MUD-client
 Comment[pt]=Cliente de MUD
 Comment[uk]=Клієнт MUD
