--- a/plugins/mapper/kmuddymapper.desktop
+++ b/plugins/mapper/kmuddymapper.desktop
@@ -1,10 +1,12 @@
 [Desktop Entry]
 Type=Service
 Comment=A Mapper for KMuddy
+Comment[es]=Mapeador para KMuddy
 Comment[pt]=Um Mapeador do KMuddy
 Comment[uk]=Робота з картами у KMuddy
 Comment[x-test]=xxA Mapper for KMuddyxx
 Name=Kmuddy Mapper
+Name[es]=Mapeador para Kmuddy
 Name[pt]=Um Mapeador do KMuddy
 Name[uk]=Робота з картами у Kmuddy
 Name[x-test]=xxKmuddy Mapperxx
