--- a/plugins/mapper/plugins/speedwalk/kmuddymapper_speedwalk.desktop
+++ b/plugins/mapper/plugins/speedwalk/kmuddymapper_speedwalk.desktop
@@ -1,10 +1,12 @@
 [Desktop Entry]
 Type=Service
 Comment=The speedwalk list plugin for the kmuddy mapper
+Comment[es]=Complemento de lista de speedwalk para el mapeador de KMuddy
 Comment[pt]=O 'plugin' de listas do Speedwalk para o mapeador do KMuddy
 Comment[uk]=Додаток списку проходження до засобу роботи з картами KMuddy
 Comment[x-test]=xxThe speedwalk list plugin for the kmuddy mapperxx
 Name=Speedwalk
+Name[es]=Speedwalk
 Name[nl]=Speedwalk
 Name[pt]=Speedwalk
 Name[uk]=Проходження
