--- a/plugins/strings/kmuddystringsplugin.desktop
+++ b/plugins/strings/kmuddystringsplugin.desktop
@@ -2,12 +2,14 @@
 Encoding=UTF-8
 Name=Strings
 Name[cs]=Řetězce
+Name[es]=Cadenas
 Name[nl]=Tekenreeksen
 Name[pt]=Cadeias de Caracteres
 Name[sv]=Strängar
 Name[uk]=Рядки
 Name[x-test]=xxStringsxx
 Comment=This plug-in adds many strings functions.
+Comment[es]=Este complemento añade muchas funciones de cadena.
 Comment[pt]=Este 'plugin' adiciona muitas funções para cadeias de caracteres.
 Comment[uk]=За допомогою цього додатка реалізовано багато функцій, призначених для обробки рядків.
 Comment[x-test]=xxThis plug-in adds many strings functions.xx
