--- a/plugins/test/kmuddytestplugin.desktop
+++ b/plugins/test/kmuddytestplugin.desktop
@@ -1,10 +1,12 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Testing Plug-in
+Name[es]=Probando el complemento
 Name[pt]=A Testar o 'Plugin'
 Name[uk]=Тестовий додаток
 Name[x-test]=xxTesting Plug-inxx
 Comment=Testing Plug-in
+Comment[es]=Probando el complemento
 Comment[pt]=A Testar o 'Plugin'
 Comment[uk]=Тестовий додаток
 Comment[x-test]=xxTesting Plug-inxx
