SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -17,12 +17,14 @@ GenericName=MUD client
 GenericName[es]=Cliente de MUD
 GenericName[nl]=MUD-client
 GenericName[pt]=Cliente de MUD
+GenericName[sv]=MUD-klient
 GenericName[uk]=Клієнт MUD
 GenericName[x-test]=xxMUD clientxx
 Comment=MUD client
 Comment[es]=Cliente de MUD
 Comment[nl]=MUD-client
 Comment[pt]=Cliente de MUD
+Comment[sv]=MUD-klient
 Comment[uk]=Клієнт MUD
 Comment[x-test]=xxMUD clientxx
 Terminal=false
