--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -3,6 +3,7 @@ Type=Service
 Comment=The standard mapper tools and views
 Comment[es]=Vistas y herramientas del mapeador estándar
 Comment[pt]=As ferramentas e vistas normais do mapeador
+Comment[sv]=De vanliga kartverktygen och vyerna
 Comment[uk]=Стандартні засоби і панелі перегляду карт
 Comment[x-test]=xxThe standard mapper tools and viewsxx
 Name=Standard
@@ -17,6 +18,7 @@ Name[x-test]=xxStandardxx
 Comment=The standard mapper tools and views
 Comment[es]=Vistas y herramientas del mapeador estándar
 Comment[pt]=As ferramentas e vistas normais do mapeador
+Comment[sv]=De vanliga kartverktygen och vyerna
 Comment[uk]=Стандартні засоби і панелі перегляду карт
 Comment[x-test]=xxThe standard mapper tools and viewsxx
 ServiceTypes=KMuddy/Mapper/Plugin
