--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -4,12 +4,14 @@ Name=Plugin Template
 Name[es]=Plantilla para complementos
 Name[nds]=Moduulvörlaag
 Name[pt]=Modelo do 'Plugin'
+Name[sv]=Mall för insticksprogram
 Name[uk]=Шаблон додатка
 Name[x-test]=xxPlugin Templatexx
 Comment=Plugin Template
 Comment[es]=Plantilla para complementos
 Comment[nds]=Moduulvörlaag
 Comment[pt]=Modelo do 'Plugin'
+Comment[sv]=Mall för insticksprogram
 Comment[uk]=Шаблон додатка
 Comment[x-test]=xxPlugin Templatexx
 ServiceTypes=KMuddy/Plugin
