SVN_SILENT made messages (.desktop file)

--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -8,6 +8,7 @@ Comment[uk]=Стандартні засоби і панелі перегляду
 Comment[x-test]=xxThe standard mapper tools and viewsxx
 Name=Standard
 Name[cs]=Standardní
+Name[de]=Standard
 Name[es]=Estándar
 Name[nds]=Standard
 Name[nl]=Standaard
