SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -6,6 +6,7 @@ Name[cs]=KMuddy
 Name[es]=KMuddy
 Name[nl]=KMuddy
 Name[pt]=KMuddy
+Name[pt_BR]=KMuddy
 Name[sv]=Kmuddy
 Name[uk]=KMuddy
 Name[x-test]=xxKMuddyxx
@@ -17,6 +18,7 @@ GenericName=MUD client
 GenericName[es]=Cliente de MUD
 GenericName[nl]=MUD-client
 GenericName[pt]=Cliente de MUD
+GenericName[pt_BR]=Cliente MUD
 GenericName[sv]=MUD-klient
 GenericName[uk]=Клієнт MUD
 GenericName[x-test]=xxMUD clientxx
@@ -24,6 +26,7 @@ Comment=MUD client
 Comment[es]=Cliente de MUD
 Comment[nl]=MUD-client
 Comment[pt]=Cliente de MUD
+Comment[pt_BR]=Cliente MUD
 Comment[sv]=MUD-klient
 Comment[uk]=Клієнт MUD
 Comment[x-test]=xxMUD clientxx
