--- a/plugins/mapper/kmuddymapperplugin.desktop
+++ b/plugins/mapper/kmuddymapperplugin.desktop
@@ -4,6 +4,7 @@ X-KDE-ServiceType=KMuddy/Mapper/Plugin
 Name=KMuddy Mapper Tool
 Name[es]=Herramienta mapeadora para KMuddy
 Name[pt]=Ferramenta de Mapeamento do KMuddy
+Name[pt_BR]=Ferramenta de mapeamento do KMuddy
 Name[sv]=Kmuddy-kartverktyg
 Name[uk]=Засіб роботи з картами KMuddy
 Name[x-test]=xxKMuddy Mapper Toolxx
