--- a/libs/kmuddyplugin.desktop
+++ b/libs/kmuddyplugin.desktop
@@ -7,6 +7,7 @@ Comment=KMuddy Plugin
 Comment[es]=Complemento para KMuddy
 Comment[nl]=Plugin van KMuddy
 Comment[pt]='Plugin' do KMuddy
+Comment[pt_BR]=Plug-in do KMuddy
 Comment[sv]=Insticksprogram för Kmuddy
 Comment[uk]=Додаток KMuddy
 Comment[x-test]=xxKMuddy Pluginxx
