--- a/plugins/scripting/kmuddyscriptingplugin.desktop
+++ b/plugins/scripting/kmuddyscriptingplugin.desktop
@@ -4,12 +4,14 @@ Name=External Scripting
 Name[es]=Scripts externos
 Name[nl]=Externe scripting
 Name[pt]=Programação Externa
+Name[pt_BR]=Programação de scripts externa
 Name[sv]=Externa skript
 Name[uk]=Зовнішні скрипти
 Name[x-test]=xxExternal Scriptingxx
 Comment=Adds support for external scripting.
 Comment[es]=Añade apoyo para scripts externos.
 Comment[pt]=Adiciona o suporte para programas externos.
+Comment[pt_BR]=Adiciona suporte para scripts externos.
 Comment[sv]=Lägger till stöd för externa skript.
 Comment[uk]=Додає підтримку обробки зовнішніх скриптів.
 Comment[x-test]=xxAdds support for external scripting.xx
