--- a/plugins/test/kmuddytestplugin.desktop
+++ b/plugins/test/kmuddytestplugin.desktop
@@ -3,12 +3,14 @@ Encoding=UTF-8
 Name=Testing Plug-in
 Name[es]=Probando el complemento
 Name[pt]=A Testar o 'Plugin'
+Name[pt_BR]=Testando o plug-in
 Name[sv]=Insticksprogram för test
 Name[uk]=Тестовий додаток
 Name[x-test]=xxTesting Plug-inxx
 Comment=Testing Plug-in
 Comment[es]=Probando el complemento
 Comment[pt]=A Testar o 'Plugin'
+Comment[pt_BR]=Testando o plug-in
 Comment[sv]=Insticksprogram för test
 Comment[uk]=Тестовий додаток
 Comment[x-test]=xxTesting Plug-inxx
