--- a/plugins/varviewer/kmuddyvarviewerplugin.desktop
+++ b/plugins/varviewer/kmuddyvarviewerplugin.desktop
@@ -3,12 +3,14 @@ Encoding=UTF-8
 Name=Variable Viewer
 Name[es]=Visor variable
 Name[pt]=Visualizador de Variáveis
+Name[pt_BR]=Visualizador de variáveis
 Name[sv]=Variabelvisning
 Name[uk]=Перегляд змінних
 Name[x-test]=xxVariable Viewerxx
 Comment=This plug-in provides a variable viewer window.
 Comment[es]=Este complemento proporciona una ventana de visor variable.
 Comment[pt]=Este 'plugin' fornece uma janela de visualização de variáveis.
+Comment[pt_BR]=Este plug-in fornece uma janela de visualização de variáveis.
 Comment[sv]=Det här insticksprogrammet tillhandahåller ett fönster för variabelvisning
 Comment[uk]=За допомогою цього додатка реалізовано роботу вікна перегляду змінних.
 Comment[x-test]=xxThis plug-in provides a variable viewer window.xx
