--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -5,6 +5,7 @@ Name[de]=Modulvorlage
 Name[es]=Plantilla para complementos
 Name[nds]=Moduulvörlaag
 Name[pt]=Modelo do 'Plugin'
+Name[pt_BR]=Modelo do plug-in
 Name[sv]=Mall för insticksprogram
 Name[uk]=Шаблон додатка
 Name[x-test]=xxPlugin Templatexx
@@ -13,6 +14,7 @@ Comment[de]=Modulvorlage
 Comment[es]=Plantilla para complementos
 Comment[nds]=Moduulvörlaag
 Comment[pt]=Modelo do 'Plugin'
+Comment[pt_BR]=Modelo do plug-in
 Comment[sv]=Mall för insticksprogram
 Comment[uk]=Шаблон додатка
 Comment[x-test]=xxPlugin Templatexx
