--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -2,6 +2,7 @@
 Type=Service
 Comment=The standard mapper tools and views
 Comment[es]=Vistas y herramientas del mapeador estándar
+Comment[fr]=Les afficheurs et éditeurs de niveau standards
 Comment[pt]=As ferramentas e vistas normais do mapeador
 Comment[pt_BR]=As ferramentas e visualizações normais do mapeador
 Comment[sv]=De vanliga kartverktygen och vyerna
@@ -11,6 +12,7 @@ Name=Standard
 Name[cs]=Standardní
 Name[de]=Standard
 Name[es]=Estándar
+Name[fr]=Standard
 Name[nds]=Standard
 Name[nl]=Standaard
 Name[pt]=Normal
@@ -20,6 +22,7 @@ Name[uk]=Стандарт
 Name[x-test]=xxStandardxx
 Comment=The standard mapper tools and views
 Comment[es]=Vistas y herramientas del mapeador estándar
+Comment[fr]=Les afficheurs et éditeurs de niveau standards
 Comment[pt]=As ferramentas e vistas normais do mapeador
 Comment[pt_BR]=As ferramentas e visualizações normais do mapeador
 Comment[sv]=De vanliga kartverktygen och vyerna
