--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Name=Plugin Template
 Name[de]=Modulvorlage
 Name[es]=Plantilla para complementos
+Name[fr]=Module externe de modèle
 Name[nds]=Moduulvörlaag
 Name[pt]=Modelo do 'Plugin'
 Name[pt_BR]=Modelo do plug-in
@@ -12,6 +13,7 @@ Name[x-test]=xxPlugin Templatexx
 Comment=Plugin Template
 Comment[de]=Modulvorlage
 Comment[es]=Plantilla para complementos
+Comment[fr]=Module externe de modèle
 Comment[nds]=Moduulvörlaag
 Comment[pt]=Modelo do 'Plugin'
 Comment[pt_BR]=Modelo do plug-in
