--- a/libs/kmuddyplugin.desktop
+++ b/libs/kmuddyplugin.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceType=KMuddy/Plugin
 X-KDE-Derived=KPluginInfo
 Comment=KMuddy Plugin
 Comment[es]=Complemento para KMuddy
+Comment[fr]=Module externe KMuddy
 Comment[nl]=Plugin van KMuddy
 Comment[pt]='Plugin' do KMuddy
 Comment[pt_BR]=Plug-in do KMuddy
