--- a/plugins/vartrigs/kmuddyvartrigplugin.desktop
+++ b/plugins/vartrigs/kmuddyvartrigplugin.desktop
@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Name=Variable Triggers
 Name[es]=Desencadenantes variables
+Name[fr]=Déclencheurs associés aux variables
 Name[pt]=Activações de Variáveis
 Name[pt_BR]=Acionamentos da variável
 Name[sv]=Variabelutlösare
@@ -9,6 +10,7 @@ Name[uk]=Умовні зміни
 Name[x-test]=xxVariable Triggersxx
 Comment=Adds supports for triggers that fire off variable changes.
 Comment[es]=Añade apoyo para desencadenantes que disparan cambios variables.
+Comment[fr]=Ajoute pour les déclencheurs qui se déclenchent lors de modifications de variables
 Comment[pt]=Adiciona o suporte para activações que despoletam mudanças de variáveis.
 Comment[pt_BR]=Adiciona suporte para acionamentos de alterações de variáveis.
 Comment[sv]=Lägger till stöd för utlösare som skickar iväg variabeländringar.
