SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -4,6 +4,7 @@ Encoding=UTF-8
 Name=KMuddy
 Name[cs]=KMuddy
 Name[es]=KMuddy
+Name[et]=KMuddy
 Name[fr]=KMuddy
 Name[nl]=KMuddy
 Name[pt]=KMuddy
@@ -17,6 +18,7 @@ Icon=kmuddy.png
 DocPath=kmuddy/index.html
 GenericName=MUD client
 GenericName[es]=Cliente de MUD
+GenericName[et]=MUD-i klient
 GenericName[fr]=Client MUD (Donjon Multi Utilisateurs)
 GenericName[nl]=MUD-client
 GenericName[pt]=Cliente de MUD
@@ -26,6 +28,7 @@ GenericName[uk]=Клієнт MUD
 GenericName[x-test]=xxMUD clientxx
 Comment=MUD client
 Comment[es]=Cliente de MUD
+Comment[et]=MUD-i klient
 Comment[fr]=Client MUD (Donjon Multi Utilisateurs)
 Comment[nl]=MUD-client
 Comment[pt]=Cliente de MUD
