--- a/plugins/strings/kmuddystringsplugin.desktop
+++ b/plugins/strings/kmuddystringsplugin.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Name=Strings
 Name[cs]=Řetězce
 Name[es]=Cadenas
+Name[et]=Stringid
 Name[fr]=Chaîne de caractères
 Name[nl]=Tekenreeksen
 Name[pt]=Cadeias de Caracteres
@@ -12,6 +13,7 @@ Name[uk]=Рядки
 Name[x-test]=xxStringsxx
 Comment=This plug-in adds many strings functions.
 Comment[es]=Este complemento añade muchas funciones de cadena.
+Comment[et]=Paljusid stringifunktsioone lisav plugin.
 Comment[fr]=Ce module externe ajoute de nombreuses fonctions pour les chaînes de caractères
 Comment[pt]=Este 'plugin' adiciona muitas funções para cadeias de caracteres.
 Comment[pt_BR]=Este plug-in adiciona muitas funções para scripts.
