--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Name=Plugin Template
 Name[de]=Modulvorlage
 Name[es]=Plantilla para complementos
+Name[et]=Mallplugin
 Name[fr]=Module externe de modèle
 Name[nds]=Moduulvörlaag
 Name[pt]=Modelo do 'Plugin'
@@ -13,6 +14,7 @@ Name[x-test]=xxPlugin Templatexx
 Comment=Plugin Template
 Comment[de]=Modulvorlage
 Comment[es]=Plantilla para complementos
+Comment[et]=Mallplugin
 Comment[fr]=Module externe de modèle
 Comment[nds]=Moduulvörlaag
 Comment[pt]=Modelo do 'Plugin'
