--- a/plugins/test/kmuddytestplugin.desktop
+++ b/plugins/test/kmuddytestplugin.desktop
@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Name=Testing Plug-in
 Name[es]=Probando el complemento
+Name[et]=Testplugin
 Name[fr]=Module externe de test
 Name[pt]=A Testar o 'Plugin'
 Name[pt_BR]=Testando o plug-in
@@ -10,6 +11,7 @@ Name[uk]=Тестовий додаток
 Name[x-test]=xxTesting Plug-inxx
 Comment=Testing Plug-in
 Comment[es]=Probando el complemento
+Comment[et]=Testplugin
 Comment[fr]=Module externe de test
 Comment[pt]=A Testar o 'Plugin'
 Comment[pt_BR]=Testando o plug-in
