--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -2,6 +2,7 @@
 Type=Service
 Comment=The standard mapper tools and views
 Comment[es]=Vistas y herramientas del mapeador estándar
+Comment[et]=Standardsed tasemelooja tööriistad ja vaated
 Comment[fr]=Les afficheurs et éditeurs de niveau standards
 Comment[pt]=As ferramentas e vistas normais do mapeador
 Comment[pt_BR]=As ferramentas e visualizações normais do mapeador
@@ -12,6 +13,7 @@ Name=Standard
 Name[cs]=Standardní
 Name[de]=Standard
 Name[es]=Estándar
+Name[et]=Standardne
 Name[fr]=Standard
 Name[nds]=Standard
 Name[nl]=Standaard
@@ -22,6 +24,7 @@ Name[uk]=Стандарт
 Name[x-test]=xxStandardxx
 Comment=The standard mapper tools and views
 Comment[es]=Vistas y herramientas del mapeador estándar
+Comment[et]=Standardsed tasemelooja tööriistad ja vaated
 Comment[fr]=Les afficheurs et éditeurs de niveau standards
 Comment[pt]=As ferramentas e vistas normais do mapeador
 Comment[pt_BR]=As ferramentas e visualizações normais do mapeador
