--- a/plugins/vartrigs/kmuddyvartrigplugin.desktop
+++ b/plugins/vartrigs/kmuddyvartrigplugin.desktop
@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Name=Variable Triggers
 Name[es]=Desencadenantes variables
+Name[et]=Mitmesugused päästikud
 Name[fr]=Déclencheurs associés aux variables
 Name[pt]=Activações de Variáveis
 Name[pt_BR]=Acionamentos da variável
@@ -10,6 +11,7 @@ Name[uk]=Умовні зміни
 Name[x-test]=xxVariable Triggersxx
 Comment=Adds supports for triggers that fire off variable changes.
 Comment[es]=Añade apoyo para desencadenantes que disparan cambios variables.
+Comment[et]=Erinevate sündmuste puhul käivituvate päästikute toetus.
 Comment[fr]=Ajoute pour les déclencheurs qui se déclenchent lors de modifications de variables
 Comment[pt]=Adiciona o suporte para activações que despoletam mudanças de variáveis.
 Comment[pt_BR]=Adiciona suporte para acionamentos de alterações de variáveis.
