SVN_SILENT made messages (.desktop file)

--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -20,6 +20,7 @@ Name[nl]=Standaard
 Name[pt]=Normal
 Name[pt_BR]=Padrão
 Name[sv]=Standard
+Name[ug]=ئۆلچەملىك
 Name[uk]=Стандарт
 Name[x-test]=xxStandardxx
 Comment=The standard mapper tools and views
