SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -3,9 +3,11 @@ Version=1.0
 Encoding=UTF-8
 Name=KMuddy
 Name[cs]=KMuddy
+Name[de]=KMuddy
 Name[es]=KMuddy
 Name[et]=KMuddy
 Name[fr]=KMuddy
+Name[km]= 
 Name[nl]=KMuddy
 Name[pt]=KMuddy
 Name[pt_BR]=KMuddy
