--- a/libs/kmuddyplugin.desktop
+++ b/libs/kmuddyplugin.desktop
@@ -4,6 +4,7 @@ Type=ServiceType
 X-KDE-ServiceType=KMuddy/Plugin
 X-KDE-Derived=KPluginInfo
 Comment=KMuddy Plugin
+Comment[de]=KMuddy-Modul
 Comment[es]=Complemento para KMuddy
 Comment[et]=KMuddy plugin
 Comment[fr]=Module externe KMuddy
