SVN_SILENT made messages (.desktop file)

--- a/plugins/strings/kmuddystringsplugin.desktop
+++ b/plugins/strings/kmuddystringsplugin.desktop
@@ -9,6 +9,7 @@ Name[nl]=Tekenreeksen
 Name[pt]=Cadeias de Caracteres
 Name[pt_BR]=Strings
 Name[sv]=Strängar
+Name[ug]=تېكىستلەر
 Name[uk]=Рядки
 Name[x-test]=xxStringsxx
 Comment=This plug-in adds many strings functions.
