SVN_SILENT made messages (.desktop file)

--- a/kmuddy/kmuddy.desktop
+++ b/kmuddy/kmuddy.desktop
@@ -9,6 +9,7 @@ Name[et]=KMuddy
 Name[fr]=KMuddy
 Name[km]= 
 Name[nl]=KMuddy
+Name[pl]=KMuddy
 Name[pt]=KMuddy
 Name[pt_BR]=KMuddy
 Name[sv]=Kmuddy
@@ -23,6 +24,7 @@ GenericName[es]=Cliente de MUD
 GenericName[et]=MUD-i klient
 GenericName[fr]=Client MUD (Donjon Multi Utilisateurs)
 GenericName[nl]=MUD-client
+GenericName[pl]=Klient MUD
 GenericName[pt]=Cliente de MUD
 GenericName[pt_BR]=Cliente MUD
 GenericName[sv]=MUD-klient
@@ -33,6 +35,7 @@ Comment[es]=Cliente de MUD
 Comment[et]=MUD-i klient
 Comment[fr]=Client MUD (Donjon Multi Utilisateurs)
 Comment[nl]=MUD-client
+Comment[pl]=Klient MUD
 Comment[pt]=Cliente de MUD
 Comment[pt_BR]=Cliente MUD
 Comment[sv]=MUD-klient
