--- a/libs/kmuddyplugin.desktop
+++ b/libs/kmuddyplugin.desktop
@@ -9,6 +9,7 @@ Comment[es]=Complemento para KMuddy
 Comment[et]=KMuddy plugin
 Comment[fr]=Module externe KMuddy
 Comment[nl]=Plugin van KMuddy
+Comment[pl]=Wtyczka KMuddy
 Comment[pt]='Plugin' do KMuddy
 Comment[pt_BR]=Plug-in do KMuddy
 Comment[sv]=Insticksprogram för Kmuddy
