--- a/plugins/mapper/kmuddymapper.desktop
+++ b/plugins/mapper/kmuddymapper.desktop
@@ -4,6 +4,7 @@ Comment=A Mapper for KMuddy
 Comment[es]=Mapeador para KMuddy
 Comment[et]=KMuddy tasemelooja
 Comment[fr]=Un éditeur de niveau (Mapper) pour KMuddy
+Comment[pl]=Mapowanie dla KMuddy
 Comment[pt]=Um Mapeador do KMuddy
 Comment[pt_BR]=Um mapeador do KMuddy
 Comment[sv]=Ett kartverktyg för Kmuddy
@@ -13,6 +14,7 @@ Name=Kmuddy Mapper
 Name[es]=Mapeador para Kmuddy
 Name[et]=KMuddy tasemelooja
 Name[fr]=Éditeur de niveau (Mapper) pour KMuddy
+Name[pl]=Mapowanie Kmuddy
 Name[pt]=Um Mapeador do KMuddy
 Name[pt_BR]=Mapeador do KMuddy
 Name[sv]=Kmuddy-karthantering
