--- a/plugins/mapper/plugins/speedwalk/kmuddymapper_speedwalk.desktop
+++ b/plugins/mapper/plugins/speedwalk/kmuddymapper_speedwalk.desktop
@@ -4,6 +4,7 @@ Comment=The speedwalk list plugin for the kmuddy mapper
 Comment[es]=Complemento de lista de speedwalk para el mapeador de KMuddy
 Comment[et]=KMuddy tasemelooja kiirliikumise plugin
 Comment[fr]=Le module externe de la liste des déplacements automatiques (Speedwalking) pour l'éditeur de niveau (Mapper) de KMuddy
+Comment[pl]=Wtyczka listy szybkiego chodzenia dla mapowania kmuddy
 Comment[pt]=O 'plugin' de listas do Speedwalk para o mapeador do KMuddy
 Comment[pt_BR]=O plug-in de listas do Speedwalk para o mapeador do KMuddy
 Comment[sv]=Insticksprogrammet för snabbgenomgång av listor för Kmuddy-karthantering
@@ -14,6 +15,7 @@ Name[es]=Speedwalk
 Name[et]=Kiirliikumine
 Name[fr]=Déplacements automatiques (Speedwalking)
 Name[nl]=Speedwalk
+Name[pl]=Szybkie chodzenie
 Name[pt]=Speedwalk
 Name[pt_BR]=Speedwalk
 Name[sv]=Snabbgenomgång
