--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -4,6 +4,7 @@ Comment=The standard mapper tools and views
 Comment[es]=Vistas y herramientas del mapeador estándar
 Comment[et]=Standardsed tasemelooja tööriistad ja vaated
 Comment[fr]=Les afficheurs et éditeurs de niveau standards
+Comment[pl]=Standardowe narzędzia mapowania i widoków
 Comment[pt]=As ferramentas e vistas normais do mapeador
 Comment[pt_BR]=As ferramentas e visualizações normais do mapeador
 Comment[sv]=De vanliga kartverktygen och vyerna
@@ -17,6 +18,7 @@ Name[et]=Standardne
 Name[fr]=Standard
 Name[nds]=Standard
 Name[nl]=Standaard
+Name[pl]=Standard
 Name[pt]=Normal
 Name[pt_BR]=Padrão
 Name[sv]=Standard
@@ -27,6 +29,7 @@ Comment=The standard mapper tools and views
 Comment[es]=Vistas y herramientas del mapeador estándar
 Comment[et]=Standardsed tasemelooja tööriistad ja vaated
 Comment[fr]=Les afficheurs et éditeurs de niveau standards
+Comment[pl]=Standardowe narzędzia mapowania i widoków
 Comment[pt]=As ferramentas e vistas normais do mapeador
 Comment[pt_BR]=As ferramentas e visualizações normais do mapeador
 Comment[sv]=De vanliga kartverktygen och vyerna
