--- a/plugins/scripting/kmuddyscriptingplugin.desktop
+++ b/plugins/scripting/kmuddyscriptingplugin.desktop
@@ -5,6 +5,7 @@ Name[es]=Scripts externos
 Name[et]=Väline skriptimine
 Name[fr]=Scripts externes
 Name[nl]=Externe scripting
+Name[pl]=Zewnętrzny skrypt
 Name[pt]=Programação Externa
 Name[pt_BR]=Programação de scripts externa
 Name[sv]=Externa skript
@@ -14,6 +15,7 @@ Comment=Adds support for external scripting.
 Comment[es]=Añade apoyo para scripts externos.
 Comment[et]=Välise skriptimise toetus.
 Comment[fr]=Ajoute la prise en charge des scripts externes.
+Comment[pl]=Dodaje obsługę dla zewnętrznych skryptów
 Comment[pt]=Adiciona o suporte para programas externos.
 Comment[pt_BR]=Adiciona suporte para scripts externos.
 Comment[sv]=Lägger till stöd för externa skript.
