--- a/plugins/test/kmuddytestplugin.desktop
+++ b/plugins/test/kmuddytestplugin.desktop
@@ -4,6 +4,7 @@ Name=Testing Plug-in
 Name[es]=Probando el complemento
 Name[et]=Testplugin
 Name[fr]=Module externe de test
+Name[pl]=Testowa wtyczka
 Name[pt]=A Testar o 'Plugin'
 Name[pt_BR]=Testando o plug-in
 Name[sv]=Insticksprogram för test
@@ -13,6 +14,7 @@ Comment=Testing Plug-in
 Comment[es]=Probando el complemento
 Comment[et]=Testplugin
 Comment[fr]=Module externe de test
+Comment[pl]=Testowa wtyczka
 Comment[pt]=A Testar o 'Plugin'
 Comment[pt_BR]=Testando o plug-in
 Comment[sv]=Insticksprogram för test
