--- a/plugins/varviewer/kmuddyvarviewerplugin.desktop
+++ b/plugins/varviewer/kmuddyvarviewerplugin.desktop
@@ -4,6 +4,7 @@ Name=Variable Viewer
 Name[es]=Visor variable
 Name[et]=Muutujanäitaja
 Name[fr]=Afficheur de variables
+Name[pl]=Przeglądarka zmiennych
 Name[pt]=Visualizador de Variáveis
 Name[pt_BR]=Visualizador de variáveis
 Name[sv]=Variabelvisning
@@ -13,6 +14,7 @@ Comment=This plug-in provides a variable viewer window.
 Comment[es]=Este complemento proporciona una ventana de visor variable.
 Comment[et]=Muutujanäitaja akent pakkuv plugin.
 Comment[fr]=Ce module externe fournit une fenêtre d'affichage des variables
+Comment[pl]=Wtyczka zapewnia okno przeglądarki zmiennych.
 Comment[pt]=Este 'plugin' fornece uma janela de visualização de variáveis.
 Comment[pt_BR]=Este plug-in fornece uma janela de visualização de variáveis.
 Comment[sv]=Det här insticksprogrammet tillhandahåller ett fönster för variabelvisning
