--- a/plugins/converter/kmuddyconverterplugin.desktop
+++ b/plugins/converter/kmuddyconverterplugin.desktop
@@ -5,6 +5,7 @@ Name[es]=Conversor de perfiles
 Name[et]=Profiiliteisendaja
 Name[fr]=Convertisseur de profil
 Name[nl]=Profielconverter
+Name[pl]=Przekształcanie profilu
 Name[pt]=Conversor de Perfis
 Name[pt_BR]=Conversor de perfis
 Name[sv]=Profilkonvertering
@@ -15,6 +16,7 @@ Comment[es]=Este complemento convierte perfiles desde versiones antiguas de KMud
 Comment[et]=Plugin, mis teisendab profiile KMuddy vanematest versioonidest.
 Comment[fr]=Ce module externe convertit les profils issus des anciennes versions de KMuddy
 Comment[nl]=Deze plugin converteert profielen van oude KMuddy-versies.
+Comment[pl]=Wtyczka ta przekształca profile ze starej wersji KMuddy.
 Comment[pt]=Este 'plugin' converte os perfis das versões antigas do KMuddy.
 Comment[pt_BR]=Este plug-in converte os perfis das versões antigas do KMuddy.
 Comment[sv]=Det här insticksprogrammet konverterar profiler från gamla versioner av Kmuddy.
