--- a/plugins/strings/kmuddystringsplugin.desktop
+++ b/plugins/strings/kmuddystringsplugin.desktop
@@ -6,6 +6,7 @@ Name[es]=Cadenas
 Name[et]=Stringid
 Name[fr]=Chaîne de caractères
 Name[nl]=Tekenreeksen
+Name[pl]=Ciągi znaków
 Name[pt]=Cadeias de Caracteres
 Name[pt_BR]=Strings
 Name[sv]=Strängar
@@ -16,6 +17,7 @@ Comment=This plug-in adds many strings functions.
 Comment[es]=Este complemento añade muchas funciones de cadena.
 Comment[et]=Paljusid stringifunktsioone lisav plugin.
 Comment[fr]=Ce module externe ajoute de nombreuses fonctions pour les chaînes de caractères
+Comment[pl]=Wtyczka ta dodaj wiele funkcji ciągów znaków.
 Comment[pt]=Este 'plugin' adiciona muitas funções para cadeias de caracteres.
 Comment[pt_BR]=Este plug-in adiciona muitas funções para scripts.
 Comment[sv]=Det här insticksprogrammet lägger till en mängd strängfunktioner.
