--- a/template/kmuddyplugintemplate.desktop
+++ b/template/kmuddyplugintemplate.desktop
@@ -6,6 +6,7 @@ Name[es]=Plantilla para complementos
 Name[et]=Mallplugin
 Name[fr]=Module externe de modèle
 Name[nds]=Moduulvörlaag
+Name[pl]=Wtyczka szablonu
 Name[pt]=Modelo do 'Plugin'
 Name[pt_BR]=Modelo do plug-in
 Name[sv]=Mall för insticksprogram
@@ -17,6 +18,7 @@ Comment[es]=Plantilla para complementos
 Comment[et]=Mallplugin
 Comment[fr]=Module externe de modèle
 Comment[nds]=Moduulvörlaag
+Comment[pl]=Wtyczka szablonu
 Comment[pt]=Modelo do 'Plugin'
 Comment[pt_BR]=Modelo do plug-in
 Comment[sv]=Mall för insticksprogram
