SVN_SILENT made messages (.desktop file)

--- a/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
+++ b/plugins/mapper/plugins/standard/kmuddymapper_standard.desktop
@@ -16,6 +16,7 @@ Name[de]=Standard
 Name[es]=Estándar
 Name[et]=Standardne
 Name[fr]=Standard
+Name[ga]=Caighdeánach
 Name[nds]=Standard
 Name[nl]=Standaard
 Name[pl]=Standard
